<?xml version="1.0"?>
<package format="3">
  <name>razor_imu</name>
  <version>0.0.1</version>
  <description>ROS 2 C++ driver for the 9DoF Razor IMU</description>

  <maintainer email="reece.j.holland@gmail.com">Reece Holland</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>